Fix zoom button divider not covering enough height

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -245,7 +245,7 @@
 }
 
 .zoomDivider {
-  height: 1em;
+  height: 1.04em;
   width: 2px;
   background-color: #333d46;
 }
